examples/test/testpolicy6623.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6623
  namespace: namespace344
spec:
  podSelector:
    matchLabels:
      key17: value48
      key8: value40
      key30: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value30
      podSelector:
        matchLabels:
          key26: value39
